[gd_scene load_steps=2 format=3 uid="uid://h1uoclcymb8g"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_aosel"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aosel")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[node name="NewGame" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="Settings" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
